@@ -146,7 +146,11 @@ print_utf8 (FILE *fp, const char *buf, size_t len)
   tstr = safe_malloc (len+1);
   memcpy (tstr, buf, len);
   tstr[len] = 0;
-  mutt_convert_string (&tstr, "utf-8", Charset, M_ICONV_HOOK_FROM);
+
+  /* fromcode "utf-8" is sure, so we don't want
+   * charset-hook corrections: flags must be 0.
+   */
+  mutt_convert_string (&tstr, "utf-8", Charset, 0);
   fputs (tstr, fp);
   FREE (&tstr);
 }
@@ -1921,7 +1925,11 @@ static void copy_clearsigned (gpgme_data_t data, STATE *s, char *charset)
     return;
   unlink (fname);
   FREE (&fname);
-  
+
+  /* fromcode comes from the MIME Content-Type charset label. It might
+   * be a wrong label, so we want the ability to do corrections via
+   * charset-hooks. Therefore we set flags to M_ICONV_HOOK_FROM.
+   */
   fc = fgetconv_open (fp, charset, Charset, M_ICONV_HOOK_FROM);
   
   for (complete = 1, armor_header = 1;
